fixed some broken links to image and gif, cleaned up some long inline code blocks, inline code blocks no longer wrap

--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -1,6 +1,12 @@
 /**
  * Syntax highlighting styles
  */
+
+// prevent inline code from wrapping to next line
+code.highlighter-rouge {
+  white-space: nowrap;
+}
+
 .highlight, .highlighter-rouge {
   @extend %vertical-rhythm;
 
